[downloads]add background, fix overflow

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -100,6 +100,7 @@ $svg-icon-size: 62px;
 body {
     font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.01em;
+    overflow-x: hidden;
     
     p {
         color: #5a5a5a;  
@@ -152,7 +153,8 @@ a, .description a {
 }
 
 .landing-page .section,
-.news .section {
+.news .section,
+.download-page .section {
     background-image: url(/img/bg.svg);
     background-size: contain;
     background-repeat: no-repeat;
